package Chapter23;

public abstract class Node {
    public abstract void parse(Context context) throws ParseException;
}
